--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,24 +25,24 @@
     "@tanstack/react-query": "^5.66.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "expo": "~52.0.30",
+    "expo": "~52.0.33",
     "expo-constants": "~17.0.5",
     "expo-font": "~13.0.3",
-    "expo-image-picker": "~16.0.5",
+    "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
     "expo-local-authentication": "~15.0.2",
     "expo-router": "^4.0.17",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "^0.29.21",
-    "expo-sqlite": "~15.1.1",
+    "expo-sqlite": "~15.1.2",
     "expo-status-bar": "^2.0.1",
-    "expo-system-ui": "^4.0.7",
+    "expo-system-ui": "~4.0.8",
     "lucide-react-native": "^0.474.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
-    "react-native": "0.76.6",
+    "react-native": "0.76.7",
     "react-native-otp-entry": "^1.8.2",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
