--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "~52.0.33",
+    "expo-auth-session": "~6.0.3",
     "expo-constants": "~17.0.5",
+    "expo-crypto": "~14.0.2",
     "expo-font": "~13.0.3",
     "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
@@ -37,6 +39,7 @@
     "expo-sqlite": "~15.1.2",
     "expo-status-bar": "^2.0.1",
     "expo-system-ui": "~4.0.8",
+    "expo-web-browser": "~14.0.2",
     "lucide-react-native": "^0.474.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
