--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "expo-auth-session": "~6.0.3",
     "expo-constants": "~17.0.5",
     "expo-crypto": "~14.0.2",
+    "expo-dev-client": "~5.0.12",
     "expo-font": "~13.0.3",
     "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
