--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,7 @@
     "ios": "expo run:ios"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.4",
-    "@hookform/resolvers": "^3.10.0",
+    "@hookform/resolvers": "^4.0.0",
     "@react-navigation/native": "^7.0.14",
     "@rn-primitives/avatar": "^1.1.0",
     "@rn-primitives/checkbox": "^1.1.0",
@@ -41,7 +40,7 @@
     "expo-status-bar": "^2.0.1",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
-    "lucide-react-native": "^0.474.0",
+    "lucide-react-native": "^0.475.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -57,7 +56,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "valibot": "^1.0.0-beta.14",
+    "valibot": "^1.0.0-rc.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
