--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
-    "ios": "expo run:ios"
+    "ios": "expo run:ios",
+    "build:web": "expo export -p web"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.0.0",
@@ -57,7 +58,7 @@
     "react-native-web": "^0.19.13",
     "react-native-webview": "13.12.5",
     "tailwind-merge": "^2.6.0",
-    "tailwind-scrollbar": "^4.0.0",
+    "tailwind-scrollbar": "3",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "valibot": "^1.0.0-rc.0",
