--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,12 @@ services:
         - EXPO_PUBLIC_API_BASE_URL=http://backend:8080/api/v1
     ports:
       - 80:80
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    ports:
+      - 8080:8080
+    env_file:
+      - ./backend/.env
+      
