docs: refine env explanation

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,11 +1,15 @@
-# Base URL for backend API. DO NOT include a trailing slash.
+# Base URL of backend API. DO NOT include a trailing slash.
+# Example: http://localhost:8080/api/v1
 EXPO_PUBLIC_API_BASE_URL=
 
-# Google OAuth 2.0 client ID, for web.
+# Google OAuth 2.0 client ID for web.
+# Example: xxxxx-xxxxxxxxxx.apps.googleusercontent.com
 EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID=
 
-# Google OAuth 2.0 client ID, for Android.
+# Google OAuth 2.0 client ID for Android.
+# Example: xxxxx-xxxxxxxxxx.apps.googleusercontent.com
 EXPO_PUBLIC_GOOGLE_ANDROID_CLIENT_ID=
 
-# Google OAuth 2.0 client ID, for iOS.
+# Google OAuth 2.0 client ID for iOS.
+# Example: xxxxx-xxxxxxxxxx.apps.googleusercontent.com
 EXPO_PUBLIC_GOOGLE_IOS_CLIENT_ID=
