chore: no need to include nativewind-env.d.ts

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -17,11 +17,6 @@
     "verbatimModuleSyntax": true,
     "incremental": true
   },
-  "include": [
-    "**/*",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts",
-    "nativewind-env.d.ts"
-  ],
+  "include": ["**/*", ".expo/types/**/*.ts", "expo-env.d.ts"],
   "exclude": ["android", "dist", "ios"]
 }
