--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "ios": "expo run:ios"
   },
   "dependencies": {
-    "@hookform/resolvers": "^4.0.0",
+    "@hookform/resolvers": "^4.1.2",
     "@react-navigation/native": "^7.0.14",
     "@rn-primitives/avatar": "^1.1.0",
     "@rn-primitives/checkbox": "^1.1.0",
@@ -23,22 +23,22 @@
     "@rn-primitives/slot": "^1.1.0",
     "@rn-primitives/switch": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
-    "@tanstack/react-query": "^5.66.0",
+    "@tanstack/react-query": "^5.66.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "expo": "~52.0.33",
+    "expo": "~52.0.36",
     "expo-auth-session": "~6.0.3",
     "expo-clipboard": "~7.0.1",
-    "expo-constants": "~17.0.5",
+    "expo-constants": "~17.0.7",
     "expo-crypto": "~14.0.2",
     "expo-dev-client": "~5.0.12",
-    "expo-font": "~13.0.3",
+    "expo-font": "~13.0.4",
     "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
     "expo-local-authentication": "~15.0.2",
     "expo-router": "^4.0.17",
     "expo-secure-store": "~14.0.1",
-    "expo-splash-screen": "^0.29.21",
+    "expo-splash-screen": "~0.29.22",
     "expo-sqlite": "~15.1.2",
     "expo-status-bar": "^2.0.1",
     "expo-system-ui": "~4.0.8",
@@ -57,16 +57,17 @@
     "react-native-web": "^0.19.13",
     "react-native-webview": "13.12.5",
     "tailwind-merge": "^2.6.0",
-    "tailwind-scrollbar": "^4.0.0",
+    "tailwind-scrollbar": "3",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "valibot": "^1.0.0-rc.0",
+    "valibot": "^1.0.0-rc.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@types/react": "~18.3.12",
-    "eas-cli": "^15.0.10",
+    "eas-cli": "^15.0.12",
     "typescript": "^5.7.3"
-  }
+  },
+  "packageManager": "npm@11.1.0+sha512.acf301ad9b9ddba948fcb72341e2f0fcae477f56a95cc2a092934d133a7461062633cefbf93d5934a3dc0768674e2edee9f04dcfcc4bb4c327ff0e3a7d552a1b"
 }
