--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "build:web": "expo export -p web"
+    "build:web": "expo export -p web",
+    "check": "tsc && biome ci"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.2",
