--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,9 +14,7 @@
     "moduleResolution": "bundler",
     "noUncheckedSideEffectImports": true,
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     },
     "verbatimModuleSyntax": true,
     "incremental": true
@@ -27,9 +25,5 @@
     "expo-env.d.ts",
     "nativewind-env.d.ts"
   ],
-  "exclude": [
-    "android",
-    "dist",
-    "ios"
-  ]
+  "exclude": ["android", "dist", "ios"]
 }
