--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,11 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "build:web": "expo export -p web"
+    "build:web": "expo export -p web",
+    "check": "tsc && biome ci"
   },
   "dependencies": {
-    "@hookform/resolvers": "^4.0.0",
+    "@hookform/resolvers": "^4.1.2",
     "@react-navigation/native": "^7.0.14",
     "@rn-primitives/avatar": "^1.1.0",
     "@rn-primitives/checkbox": "^1.1.0",
@@ -24,22 +25,22 @@
     "@rn-primitives/slot": "^1.1.0",
     "@rn-primitives/switch": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
-    "@tanstack/react-query": "^5.66.0",
+    "@tanstack/react-query": "^5.66.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "expo": "~52.0.33",
+    "expo": "~52.0.36",
     "expo-auth-session": "~6.0.3",
     "expo-clipboard": "~7.0.1",
-    "expo-constants": "~17.0.5",
+    "expo-constants": "~17.0.7",
     "expo-crypto": "~14.0.2",
     "expo-dev-client": "~5.0.12",
-    "expo-font": "~13.0.3",
+    "expo-font": "~13.0.4",
     "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
     "expo-local-authentication": "~15.0.2",
     "expo-router": "^4.0.17",
     "expo-secure-store": "~14.0.1",
-    "expo-splash-screen": "^0.29.21",
+    "expo-splash-screen": "~0.29.22",
     "expo-sqlite": "~15.1.2",
     "expo-status-bar": "^2.0.1",
     "expo-system-ui": "~4.0.8",
@@ -61,13 +62,13 @@
     "tailwind-scrollbar": "3",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "valibot": "^1.0.0-rc.0",
+    "valibot": "^1.0.0-rc.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@types/react": "~18.3.12",
-    "eas-cli": "^15.0.10",
+    "eas-cli": "^15.0.12",
     "typescript": "^5.7.3"
   }
 }
