--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "build:web": "expo export -p web",
-    "check": "tsc && biome ci"
+    "check": "tsc && biome ci",
+    "clean": "rimraf .expo android dist ios *.tsbuildinfo"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.2",
@@ -18,6 +19,7 @@
     "@rn-primitives/avatar": "^1.1.0",
     "@rn-primitives/checkbox": "^1.1.0",
     "@rn-primitives/dialog": "^1.1.0",
+    "@rn-primitives/dropdown-menu": "^1.1.0",
     "@rn-primitives/label": "^1.1.0",
     "@rn-primitives/popover": "^1.1.0",
     "@rn-primitives/portal": "^1.1.0",
@@ -26,6 +28,7 @@
     "@rn-primitives/switch": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
     "@tanstack/react-query": "^5.66.9",
+    "@tanstack/react-query-devtools": "^5.66.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "~52.0.36",
@@ -69,6 +72,7 @@
     "@biomejs/biome": "^1.9.4",
     "@types/react": "~18.3.12",
     "eas-cli": "^15.0.12",
+    "rimraf": "^6.0.1",
     "typescript": "^5.7.3"
   }
 }
