chore: remove linebreak

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -13,9 +13,7 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "noUncheckedSideEffectImports": true,
-    "paths": {
-      "@/*": ["./*"]
-    },
+    "paths": { "@/*": ["./*"] },
     "verbatimModuleSyntax": true,
     "incremental": true
   },
